# tasc_exercise/api/controllers/item.controller.js
@@ -7,7 +7,7 @@ function _getItem(req, res) {
     let itemId = req.swagger.params.itemId.value;
     new InventoryApi().find(itemId)
         .then((item) => {
-            if(item && 'lastUpdated' in item){
+            if (item && 'lastUpdated' in item) {
                 delete item.lastUpdated;
             }
             res.json(item);
@@ -29,16 +29,37 @@ function _getItems(req, res) {
         });
 }
 
+function _postItem(req, res) {
+    let item = req.swagger.params.item.value;
+    new InventoryApi().saveItem(item)
+        .then(item => res.json(item))
+        .catch((err, code) => {
+            var error = new ErrorApi(err.message);
+            error.code = err.code || 500;
+            res.status(error.code).json(error.getErrorMessage());
+        });
+}
+
 function _updateItem(req, res) {
     let item = req.swagger.params.item.value;
-    console.log(item);
-    res.json("works");
+    new InventoryApi().updateItem(item)
+        .then(item => res.json(item))
+        .catch((err, code) => {
+            var error = new ErrorApi(err.message);
+            error.code = err.code || 500;
+            res.status(error.code).json(error.getErrorMessage());
+        });
 }
 
 function _removeItem(req, res) {
     let itemId = req.swagger.params.itemId.value;
-    console.log(itemId);
-    res.json("works");
+    new InventoryApi().removeItem(itemId)
+        .then(repsonse => res.json(repsonse))
+        .catch((err, code) => {
+            var error = new ErrorApi(err.message);
+            error.code = err.code || 500;
+            res.status(error.code).json(error.getErrorMessage());
+        });
 }
 
 function _removeItems(req, res) {
@@ -48,6 +69,7 @@ function _removeItems(req, res) {
 }
 
 module.exports = {
+    postItem: _postItem,
     getItem: _getItem,
     getAllItems: _getItems,
     putItem: _updateItem,
