# tasc_exercise/api/entity/item.entity.js
@@ -3,10 +3,11 @@
 function Item(properties) {
     var self = this;
     this.id = properties.id || 999;
-    this.subTotal = properties.subTotal || 0.00;
-    this.tax = properties.tax || 0.00;
-    this.total = properties.total || (this.subTotal + this.tax);
-    this.items = properties.items || [];
+    this.name = properties.name || "";
+    this.type = properties.type || "";
+    this.import = properties.import || false;
+    this.except = properties.except || false;
+    this.price = properties.price || 1.00;
     this.lastUpdated = properties.lastUpdated || new Date().getTime();
 }
 
